--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>chat-talker</title>
     <link rel="stylesheet" href="css/all.css">
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script> 
     <script src="js/all.js"></script>
